@@ -16,7 +16,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclVar.c,v 1.135.2.8 2007/10/27 04:11:47 dgp Exp $
+ * RCS: @(#) $Id: tclVar.c,v 1.135.2.9 2007/11/05 14:20:57 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -597,7 +597,7 @@ TclObjLookupVarEx(
 
 		if (flags & TCL_LEAVE_ERR_MSG) {
 		    TclObjVarErrMsg(interp, part1Ptr, part2Ptr, msg,
-			    needArray, -1);
+			    noSuchVar, -1);
 		}
 		return NULL;
 	    }
@@ -631,6 +631,7 @@ TclObjLookupVarEx(
 			TclObjVarErrMsg(interp, part1Ptr, part2Ptr, msg,
 				needArray, -1);
 		    }
+		    return NULL;
 		}
 
 		/*
